@@ -1,5 +1,6 @@
 package com.javarush.telegram.fsm.instructions;
 
+import com.google.common.collect.ImmutableMap;
 import com.google.errorprone.annotations.Immutable;
 import com.javarush.telegram.TelegramBotContext;
 import com.javarush.telegram.TelegramBotFileUtil;
@@ -7,14 +8,12 @@ import com.javarush.telegram.responder.PhotoMessage;
 import com.javarush.telegram.responder.Responder;
 import com.javarush.telegram.responder.TextButtonsMessage;
 
-import java.util.Map;
-
 @Immutable
 public final class ChatDialogInstruction extends Instruction {
 
     private static final String CHAT = "chat";
 
-    private final Map<String, String> buttons = Map.of(
+    private final ImmutableMap<String, String> buttons = ImmutableMap.of(
             "Наступне повідомлення", "chat_next",
             "Запросити на побачення", "chat_date"
     );
